# tennis-scoreboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json  instructions.md
docs/: ARCHITECTURE.md  GITHUB_PROJECT_DOCUMENTATION.md  PROCESS_TO_1_0.md
resources/default-presets/: default-dark.json
resources/overlay/: config.css  config.html  config.js  index.html  scoreboard.css  scoreboard.js
scripts/: install-local-macos.sh
src/: plugin-main.cpp
src/core/: MatchState.cpp  MatchState.h  TennisRules.cpp  TennisRules.h
src/overlay/: OverlayHttpServer.cpp  OverlayHttpServer.h
src/ui/: ScoreboardDock.cpp  ScoreboardDock.h
tests/: tennis-rules-tests.cpp
